tests/expectations/compiler/finalize/block_height_fail.out
Error [ETYC0372034]: `block.height` must be inside a `final fn` or a `final` block.
    --> compiler-test:3:27
     |
   3 |         assert_eq(height, block.height);
     |                           ^^^^^^^^^^^^
